[gd_scene load_steps=8 format=3 uid="uid://eonsf5cks44n"]

[ext_resource type="Script" uid="uid://cyotiath61hou" path="res://source/states/Editors/ChartEditor/ChartEditor.gd" id="1_twph6"]
[ext_resource type="PackedScene" uid="uid://b1a3jlb7iu130" path="res://scenes/objects/ButtonRange.tscn" id="2_p8wo6"]
[ext_resource type="Script" uid="uid://dsm0luhaq03go" path="res://source/custom_nodes/ChessMovement.gd" id="2_y0grv"]
[ext_resource type="Script" uid="uid://cvvli26q7wviq" path="res://source/general/popup/DynamicFileMenuButton.gd" id="3_nkmqi"]
[ext_resource type="Script" uid="uid://bxu1ahcd17pxh" path="res://source/objects/Sprite/SolidSprite.gd" id="4_4ubu6"]

[sub_resource type="GDScript" id="GDScript_y0grv"]
resource_name = "ChessManager"
script/source = "extends Node2D

const ChessNotes = preload(\"uid://qtqqk5lrhuyp\")
const Icon = preload(\"uid://bgqwitowtypkw\")
const NoteChart = preload(\"uid://dxl7cofy02rr5\")
const ChessSize: Vector2 = Vector2(60,60)

@onready var position_line = $PositionLine

@export var length: int = 16
@export var steps: int = 4

@onready var charter: Node = $\"..\"
@onready var icon_player: Icon = Icon.new()
@onready var icon_opponent: Icon = Icon.new()

@onready var zoom: float = 1.0

var chess_player: Chess = ChessNotes.new()
var chess_opponent: Chess = ChessNotes.new()
var chess_events: Chess = Chess.new()

var chess_nodes: Array[Chess] = [chess_player,chess_opponent,chess_events]

var is_shift_pressed: bool


var _notes_created: Array
var _notes_section_created: Array[NoteChart]

var eventIndex: int = 0
var events_created: Array

func _ready() -> void:
	#region Event Chess
	chess_events.rect_size = ChessSize
	chess_events.steps = 1
	chess_events.length = length
	add_child(chess_events)
	
	var event_icon = Sprite2D.new()
	event_icon.texture = Paths.texture('eventArrow')
	event_icon.position.y = -45
	event_icon.scale = Vector2(0.8,0.8)
	event_icon.centered = false
	add_child(event_icon)
	#endregion
	
	#region Player Chess
	chess_player.rect_size = ChessSize
	chess_player.position.x = ChessSize.x * steps
	chess_player.steps = steps
	chess_player.length = length
	add_child(chess_player)
	
	icon_player.set_position_xy(chess_player.position.x,chess_player.position.y - 200)
	_load_icon_player()
	add_child(icon_player)
	#endregion
	
	#region Opponent Chess
	chess_opponent.rect_size = ChessSize
	chess_opponent.position.x = ChessSize.x * steps * 2.5
	chess_opponent.steps = steps
	chess_opponent.length = length
	add_child(chess_opponent)
	
	icon_opponent.set_position_xy(chess_opponent.position.x,chess_opponent.position.y - 200)
	_load_icon_opponent()
	add_child(icon_opponent)
	#endregion
	
	_update_position_line_size()
	
	move_child(position_line,-1)
	Conductor.beat_hit.connect(_icon_beat)
	Conductor.section_hit_once.connect(_on_section_hit)

func _update_position_line_size(): position_line.size.x = chess_opponent.position.x + steps*chess_opponent.rect_size.x

func _update_chess_pos() -> void: 
	var pos = -fmod(Conductor.step_float,length)
	for i in chess_nodes: i.position.y = pos*i.rect_size.y

func _process(_d: float) -> void:
	if Conductor.is_playing: _update_chess_pos()

#region Icons
func _load_icon_opponent(): icon_opponent.reloadIconFromCharacterJson(charter.player1Data)
func _load_icon_player(): icon_player.reloadIconFromCharacterJson(charter.player2Data)

func _icon_beat(): icon_player.scale += icon_player.beat_value; icon_opponent.scale += icon_opponent.beat_value
#endregion

#region Notes
func createNote(time: float, direction: int, mustPress: bool): pass

func createSectionNotes(section: int = Conductor.section):
	var notes: Array[NoteChart]
	var secData = (charter.section_data if Conductor.section == section else Conductor.get_section_data(section)).get('sectionNotes')
	if !secData: return notes
	for i in secData: print(i)
	return notes

func getNotesFromSection(section: int = Conductor.section) -> Array[NoteChart]:
	while _notes_created.size() <= Conductor.section: _notes_created.append(null)
	var notes =  _notes_created[Conductor.section]
	if notes == null: notes = createSectionNotes(); _notes_created[Conductor.section] = notes
	return notes

func addNote(note: NoteChart):
	var chess = chess_player if noteIsPlayer(note) else chess_opponent 
	chess.add_child(note)
	updateNotePosition(note)

func noteIsPlayer(note: NoteChart) -> bool:
	var hitSection = charter.section_data.get('mustHitSection')
	return hitSection and note.noteData < charter.keyCount or !hitSection and note.noteData > charter.keyCount

func loadSectionNotes():
	_notes_section_created = getNotesFromSection()
	for i in _notes_section_created: addNote(i)

func updateNotePosition(note: NoteChart) -> void:
	var parent = note.get_parent()
	note._position = Vector2(parent.rect_size.x*note.noteData,Conductor.get_step(note.strumTime)*parent.rect_size.y*zoom)

func updateNotesPosition() -> void: for i in _notes_section_created: updateNotePosition(i)
#endregion

#region Section
func _on_section_hit():loadSectionNotes()
func seek_next_section(): Conductor.seek(Conductor.get_section_time(Conductor.section+1))
func seek_previos_section(): Conductor.seek(Conductor.get_section_time(Conductor.section-1))
#endregion

func getMousePosRounded(_position: Vector2, size: Vector2) -> Vector2: return (_position/size).floor() * size

func _chess_input(event: InputEvent, chess: Chess):
	if event is InputEventMouseButton:
		var pos = event.position if is_shift_pressed else getMousePosRounded(event.position,chess.rect_size)

func _input(event: InputEvent):
	if event is InputEventKey:
		if event.keycode == KEY_SHIFT: is_shift_pressed = event.pressed
		
#region Shortcuts
func _unhandled_key_input(event: InputEvent) -> void:
	if event is InputEventKey:
		if !event.pressed: return
		match event.keycode:
			KEY_A: seek_next_section()
			KEY_D: seek_previos_section()
"

[sub_resource type="GDScript" id="GDScript_qvgc3"]
resource_name = "SongInfo"
script/source = "extends Label

func _ready() -> void: _update_info()
func _update_info():
	text = 'Song Position: '+String.num(Conductor.songPositionSeconds,1)+\\
	'\\nSection: '+String.num(Conductor.section_float,1)+'\\nSteps: '+String.num(Conductor.step_float,1)+\\
	'\\nBeats: '+String.num(Conductor.beat_float,1)
func _process(_d) -> void:
	if Conductor.is_playing: _update_info()
"

[node name="Charter" type="Node" unique_id=1124350520]
script = ExtResource("1_twph6")
songName = "test"

[node name="ChessScroll" type="Control" parent="." unique_id=1594831606]
modulate = Color(0.06879827, 0.06879828, 0.06879828, 1)
layout_mode = 3
anchors_preset = 0
offset_right = 1290.0
offset_bottom = 720.0
script = ExtResource("2_y0grv")
primary_color = Color(1, 1, 1, 1)
primary_fill = false
primary_border_width = 1.5
secondary_color = Color(1, 1, 1, 1)
secondary_fill = false
secondary_border_width = 1.5
steps = 43
length = 24
metadata/_custom_type_script = "uid://dsm0luhaq03go"

[node name="ChessControl" type="Node2D" parent="." unique_id=1235771664]
position = Vector2(0, 150)
scale = Vector2(0.7, 0.7)
script = SubResource("GDScript_y0grv")

[node name="MouseRect" type="Node2D" parent="ChessControl" unique_id=347030229]
modulate = Color(1, 1, 1, 0)
position = Vector2(22, 120)
script = ExtResource("4_4ubu6")
size = Vector2(30, 30)
metadata/_custom_type_script = "uid://bxu1ahcd17pxh"

[node name="PositionLine" type="Node2D" parent="ChessControl" unique_id=926470870]
script = ExtResource("4_4ubu6")
size = Vector2(10, 3)
metadata/_custom_type_script = "uid://bxu1ahcd17pxh"

[node name="TabContainer" type="TabContainer" parent="." unique_id=16131533]
self_modulate = Color(1, 1, 1, 0.470588)
clip_contents = true
offset_left = 737.0
offset_top = 257.0
offset_right = 1279.0
offset_bottom = 721.0
current_tab = 0
clip_tabs = false
tab_focus_mode = 0

[node name="Section" type="Control" parent="TabContainer" unique_id=316896691]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
metadata/_tab_index = 0

[node name="Text" type="Label" parent="TabContainer/Section" unique_id=1685900742]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 252.0
offset_bottom = 439.0
text = "====FOCUS====


====Section Options====




=====Section Copy=====






====Section Notes Flip====



===Section Erase===="

[node name="HitSection" type="CheckBox" parent="TabContainer/Section" unique_id=1233907891]
layout_mode = 0
offset_left = 5.0
offset_top = 23.0
offset_right = 183.0
offset_bottom = 54.0
tooltip_text = "If the section focused on the boyfriend."
focus_mode = 0
text = "Must Hit Section"

[node name="GFSection" type="CheckBox" parent="TabContainer/Section" unique_id=1688206969]
layout_mode = 0
offset_left = 189.0
offset_top = 24.0
offset_right = 311.0
offset_bottom = 55.0
tooltip_text = "If the section focused on the girlfriend."
focus_mode = 0
text = "GF Section"

[node name="Erase Section" type="Button" parent="TabContainer/Section" unique_id=636899860]
layout_mode = 0
offset_left = 324.0
offset_top = 225.0
offset_right = 454.0
offset_bottom = 256.0
focus_mode = 0
text = "Erase Section"

[node name="SectionCopyOffset" parent="TabContainer/Section" unique_id=496064233 instance=ExtResource("2_p8wo6")]
layout_mode = 0
offset_left = 6.0
offset_top = 179.0
offset_right = 384.0
offset_bottom = 219.0
text = "Section Copy Offset:"
value = 1.0
int_value = true

[node name="Button" type="Button" parent="TabContainer/Section" unique_id=949992340]
layout_mode = 0
offset_left = 8.0
offset_top = 222.0
offset_right = 176.0
offset_bottom = 253.0
focus_mode = 0
text = "Copy Last Section"

[node name="ChangeBPM" type="CheckBox" parent="TabContainer/Section" unique_id=388780152]
layout_mode = 0
offset_left = 270.0
offset_top = 99.0
offset_right = 400.0
offset_bottom = 130.0
tooltip_text = "Change the bpm starting  from this section."
focus_mode = 0
text = "Change BPM"

[node name="NewBPM" parent="TabContainer/Section" unique_id=1070633890 instance=ExtResource("2_p8wo6")]
layout_mode = 0
offset_left = 8.0
offset_top = 94.0
offset_right = 273.0
offset_bottom = 134.0
text = "New BPM:"

[node name="Swap Section" type="Button" parent="TabContainer/Section" unique_id=1909397756]
layout_mode = 0
offset_left = 190.0
offset_top = 224.0
offset_right = 311.0
offset_bottom = 255.0
focus_mode = 0
text = "Swap Section"

[node name="Erase Notes Section" type="Button" parent="TabContainer/Section" unique_id=1278677141]
layout_mode = 0
offset_left = 9.0
offset_top = 375.0
offset_right = 121.0
offset_bottom = 406.0
focus_mode = 0
text = "Erase Notes"

[node name="Erase Events Section" type="Button" parent="TabContainer/Section" unique_id=1176391395]
layout_mode = 0
offset_left = 127.0
offset_top = 375.0
offset_right = 323.0
offset_bottom = 407.0
focus_mode = 0
text = "Erase Events Section"

[node name="Flip Notes" type="Button" parent="TabContainer/Section" unique_id=1839809482]
layout_mode = 0
offset_left = 9.0
offset_top = 314.0
offset_right = 111.0
offset_bottom = 337.0
focus_mode = 0
text = "Flip Notes"

[node name="Flip Player Notes" type="Button" parent="TabContainer/Section" unique_id=412253498]
layout_mode = 0
offset_left = 118.0
offset_top = 314.0
offset_right = 286.0
offset_bottom = 337.0
focus_mode = 0
text = "Flip Player Notes"

[node name="Flip Opponent Notes" type="Button" parent="TabContainer/Section" unique_id=1212954736]
layout_mode = 0
offset_left = 293.0
offset_top = 313.0
offset_right = 480.0
offset_bottom = 336.0
focus_mode = 0
text = "Flip Opponent Notes"

[node name="Note" type="Control" parent="TabContainer" unique_id=1074875157]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
metadata/_tab_index = 1

[node name="Text" type="Label" parent="TabContainer/Note" unique_id=95421246]
layout_mode = 0
offset_right = 197.0
offset_bottom = 699.0
text = "------Note Data------

Strum Time:





Note Type:

------Strums------
Show Strums(Editor):

------Skins------

Arrow Style:

Splash Style:



"

[node name="NoteType" type="MenuButton" parent="TabContainer/Note" unique_id=1215066880]
layout_mode = 0
offset_left = 96.0
offset_top = 141.0
offset_right = 178.0
offset_bottom = 164.0
text = "None"
flat = false
script = ExtResource("3_nkmqi")
dir_to_look = "custom_notetypes"
filters = PackedStringArray(".gd")

[node name="StrumTime" type="LineEdit" parent="TabContainer/Note" unique_id=1564056190]
layout_mode = 0
offset_left = 104.0
offset_top = 31.0
offset_right = 201.0
offset_bottom = 67.0

[node name="SustainLength" parent="TabContainer/Note" unique_id=47709465 instance=ExtResource("2_p8wo6")]
layout_mode = 0
offset_left = 2.0
offset_top = 92.0
offset_right = 143.0
offset_bottom = 107.0
text = "Sustain Length:"

[node name="ShowStrums" type="CheckBox" parent="TabContainer/Note" unique_id=1369184988]
layout_mode = 0
offset_left = 189.0
offset_top = 192.0
offset_right = 213.0
offset_bottom = 216.0
focus_mode = 0

[node name="NoteStyle" type="MenuButton" parent="TabContainer/Note" unique_id=922709865]
layout_mode = 0
offset_left = 113.0
offset_top = 264.0
offset_right = 233.0
offset_bottom = 292.0
text = "funkin"
flat = false
script = ExtResource("3_nkmqi")
dir_to_look = "data/notestyles"
metadata/_custom_type_script = "uid://cvvli26q7wviq"

[node name="SplashStyle" type="MenuButton" parent="TabContainer/Note" unique_id=1420214602]
layout_mode = 0
offset_left = 124.0
offset_top = 298.0
offset_right = 273.0
offset_bottom = 326.0
text = "NoteSplashes"
flat = false
script = ExtResource("3_nkmqi")
dir_to_look = "data/splashstyles"
metadata/_custom_type_script = "uid://cvvli26q7wviq"

[node name="Event" type="Control" parent="TabContainer" unique_id=1218065198]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
metadata/_tab_index = 2

[node name="Info" type="Label" parent="TabContainer/Event" unique_id=312164332]
layout_mode = 0
offset_left = 6.0
offset_top = 20.0
offset_right = 140.0
offset_bottom = 392.0
text = "Event: 




------Variables------









------DESCRIPTION-----"

[node name="Events" type="MenuButton" parent="TabContainer/Event" unique_id=1789880209]
layout_mode = 0
offset_left = 59.0
offset_top = 17.0
offset_right = 199.0
offset_bottom = 48.0
flat = false
script = ExtResource("3_nkmqi")
dir_to_look = "custom_events"
filters = PackedStringArray("json", "txt")

[node name="VariablesContainer" type="ScrollContainer" parent="TabContainer/Event" unique_id=2115286767]
custom_minimum_size = Vector2(535, 155)
layout_mode = 0
offset_left = 1.0
offset_top = 126.0
offset_right = 537.0
offset_bottom = 281.0

[node name="Grid" type="Control" parent="TabContainer/Event/VariablesContainer" unique_id=1739959677]
layout_mode = 2

[node name="EventDescription" type="RichTextLabel" parent="TabContainer/Event" unique_id=1863839903]
layout_mode = 0
offset_left = 3.0
offset_top = 331.0
offset_right = 539.0
offset_bottom = 551.0
mouse_force_pass_scroll_events = false

[node name="SelectEventText" type="Label" parent="TabContainer/Event" unique_id=613292642]
visible = false
top_level = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 834.0
offset_top = 441.0
offset_right = -213.0
offset_bottom = -256.0
scale = Vector2(1.725, 1.725)
text = "SELECT/CREATE A EVENT FIRST"

[node name="AddEvent" type="Button" parent="TabContainer/Event" unique_id=953719009]
layout_mode = 0
offset_left = 213.0
offset_top = 18.0
offset_right = 341.0
offset_bottom = 49.0
text = "Add Event"

[node name="RemoveEvent" type="Button" parent="TabContainer/Event" unique_id=1331713857]
layout_mode = 0
offset_left = 350.0
offset_top = 18.0
offset_right = 480.0
offset_bottom = 49.0
text = "Remove Event"

[node name="EventIndex" parent="TabContainer/Event" unique_id=1566546751 instance=ExtResource("2_p8wo6")]
layout_mode = 0
offset_left = 5.0
offset_top = 57.0
offset_right = 236.0
offset_bottom = 97.0
text = "Event Selected:"
suffix = "/0"
limit_min = true
limit_max = true
int_value = true

[node name="Song" type="Control" parent="TabContainer" unique_id=1144860482]
visible = false
self_modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 2
metadata/_tab_index = 3

[node name="Label" type="Label" parent="TabContainer/Song" unique_id=939026563]
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 539.0
offset_bottom = 391.0
text = "====== Song ======

SONG:






===== Audio =====



===== Stage =====

bf:               gf:               dad:


stage: "

[node name="BPM" parent="TabContainer/Song" unique_id=1844423109 instance=ExtResource("2_p8wo6")]
layout_mode = 0
offset_left = 8.0
offset_top = 89.0
offset_right = 46.0
offset_bottom = 104.0
text = "BPM:"

[node name="Song" type="LineEdit" parent="TabContainer/Song" unique_id=771191483]
layout_mode = 0
offset_left = 55.0
offset_top = 36.0
offset_right = 231.0
offset_bottom = 67.0

[node name="Reload Audio" type="Button" parent="TabContainer/Song" unique_id=968690963]
layout_mode = 0
offset_left = 7.0
offset_top = 190.0
offset_right = 128.0
offset_bottom = 223.0
text = "Reload Audio"

[node name="bfCharacters" type="MenuButton" parent="TabContainer/Song" unique_id=1061141618]
layout_mode = 0
offset_left = 40.0
offset_top = 270.0
offset_right = 166.0
offset_bottom = 301.0
text = "bf"
flat = false
clip_text = true
script = ExtResource("3_nkmqi")
dir_to_look = "characters"
filters = PackedStringArray("json")
metadata/_custom_type_script = "uid://cvvli26q7wviq"

[node name="dadCharacters" type="MenuButton" parent="TabContainer/Song" unique_id=1151604541]
layout_mode = 0
offset_left = 385.0
offset_top = 271.0
offset_right = 511.0
offset_bottom = 302.0
text = "bf"
flat = false
clip_text = true
script = ExtResource("3_nkmqi")
dir_to_look = "characters"
filters = PackedStringArray("json")
metadata/_custom_type_script = "uid://cvvli26q7wviq"

[node name="gfCharacters" type="MenuButton" parent="TabContainer/Song" unique_id=1655140191]
layout_mode = 0
offset_left = 213.0
offset_top = 271.0
offset_right = 339.0
offset_bottom = 302.0
text = "bf"
flat = false
clip_text = true
script = ExtResource("3_nkmqi")
dir_to_look = "characters"
filters = PackedStringArray("json")
metadata/_custom_type_script = "uid://cvvli26q7wviq"

[node name="SaveToChart" type="Button" parent="TabContainer/Song" unique_id=584731833]
layout_mode = 0
offset_left = 241.0
offset_top = 33.0
offset_right = 399.0
offset_bottom = 64.0
focus_mode = 0
text = "Save Chart as..."

[node name="Save Chart" type="Button" parent="TabContainer/Song" unique_id=2070588152]
visible = false
layout_mode = 0
offset_left = 418.0
offset_top = 52.0
offset_right = 509.0
offset_bottom = 83.0
focus_mode = 0
text = "Save Chart"

[node name="Speed" parent="TabContainer/Song" unique_id=1435275787 instance=ExtResource("2_p8wo6")]
layout_mode = 0
offset_left = 8.0
offset_top = 135.0
offset_right = 65.0
offset_bottom = 150.0
text = "Speed:"

[node name="Stage" type="MenuButton" parent="TabContainer/Song" unique_id=1775748824]
layout_mode = 0
offset_left = 68.0
offset_top = 323.0
offset_right = 199.0
offset_bottom = 354.0
text = "bf"
flat = false
clip_text = true
script = ExtResource("3_nkmqi")
dir_to_look = "characters"
filters = PackedStringArray("json")
metadata/_custom_type_script = "uid://cvvli26q7wviq"

[node name="Editor" type="Control" parent="TabContainer" unique_id=228716523]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
metadata/_tab_index = 4

[node name="Text" type="Label" parent="TabContainer/Editor" unique_id=1903978463]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 544.0
offset_bottom = 553.0
text = "------Chart------




Auto Change Section:


------AUDIO------

Player Voice:               Instrumental:

Opponent Voice:


Waveform:
"

[node name="OponnentVoice" type="HSlider" parent="TabContainer/Editor" unique_id=1633607354]
layout_mode = 0
offset_left = 150.0
offset_top = 225.0
offset_right = 262.0
offset_bottom = 241.0
focus_mode = 0
max_value = 1.0
step = 0.1
value = 1.0

[node name="PlayerVoice" type="HSlider" parent="TabContainer/Editor" unique_id=1979531885]
layout_mode = 0
offset_left = 397.0
offset_top = 189.0
offset_right = 511.0
offset_bottom = 205.0
focus_mode = 0
max_value = 1.0
step = 0.1
value = 1.0

[node name="AutoChangeSection" type="CheckBox" parent="TabContainer/Editor" unique_id=130742089]
layout_mode = 0
offset_left = 196.0
offset_top = 95.0
offset_right = 220.0
offset_bottom = 119.0
focus_mode = 0
button_pressed = true

[node name="Instrumental" type="HSlider" parent="TabContainer/Editor" unique_id=204651391]
layout_mode = 0
offset_left = 132.0
offset_top = 189.0
offset_right = 243.0
offset_bottom = 205.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="NewChart" type="Button" parent="TabContainer/Editor" unique_id=177989870]
layout_mode = 0
offset_left = 10.0
offset_top = 37.0
offset_right = 128.0
offset_bottom = 68.0
focus_mode = 0
text = "New Chart"

[node name="LoadChart" type="Button" parent="TabContainer/Editor" unique_id=333369058]
layout_mode = 0
offset_left = 137.0
offset_top = 37.0
offset_right = 240.0
offset_bottom = 68.0
focus_mode = 0
text = "Load Chart"

[node name="ReloadChart" type="Button" parent="TabContainer/Editor" unique_id=845622528]
layout_mode = 0
offset_left = 245.0
offset_top = 37.0
offset_right = 353.0
offset_bottom = 68.0
focus_mode = 0
text = "Reload Chart"

[node name="WaveformMenu" type="MenuButton" parent="TabContainer/Editor" unique_id=207466028]
layout_mode = 0
offset_left = 95.0
offset_top = 275.0
offset_right = 222.0
offset_bottom = 306.0
flat = false
item_count = 4
popup/item_0/id = 0
popup/item_1/text = "Inst"
popup/item_1/id = 1
popup/item_2/text = "Voices"
popup/item_2/id = 2
popup/item_3/text = "Voices Opponent"
popup/item_3/id = 3

[node name="Editor Info" type="TabContainer" parent="." unique_id=1617815450]
offset_left = 743.0
offset_right = 1280.0
offset_bottom = 141.0
current_tab = 0
tabs_position = 1
tab_focus_mode = 0

[node name="Song Info" type="TabBar" parent="Editor Info" unique_id=1436849811]
layout_mode = 2
focus_mode = 0
metadata/_tab_index = 0

[node name="SongInfo" type="Label" parent="Editor Info/Song Info" unique_id=481087290]
layout_mode = 0
offset_left = -1.0
offset_top = 15.0
offset_right = 535.0
offset_bottom = 107.0
script = SubResource("GDScript_qvgc3")

[node name="Shortcuts" type="TabBar" parent="Editor Info" unique_id=795105677]
visible = false
layout_mode = 2
focus_mode = 0
metadata/_tab_index = 1

[node name="Label" type="Label" parent="Editor Info/Shortcuts" unique_id=1330034619]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 536.0
offset_bottom = 118.0
text = "X : Zoom In
Z : Zoom Out"

[node name="CreateChart" type="Label" parent="." unique_id=1527032650]
visible = false
offset_left = 481.0
offset_top = 266.0
offset_right = 842.0
offset_bottom = 468.0
text = "              Create Chart


Song:

BPM:"

[node name="Panel" type="Panel" parent="CreateChart" unique_id=1110497927]
show_behind_parent = true
layout_mode = 0
offset_left = -4.0
offset_top = -5.0
offset_right = 360.0
offset_bottom = 203.0

[node name="ColorRect" type="ColorRect" parent="CreateChart" unique_id=1706211576]
self_modulate = Color(0, 0, 0, 0.533333)
show_behind_parent = true
layout_mode = 0
offset_left = -484.0
offset_top = -268.0
offset_right = 798.0
offset_bottom = 452.0
color = Color(0.0588235, 0.0588235, 0.0588235, 0.701961)

[node name="Load Song Chart" type="Button" parent="CreateChart" unique_id=323389039]
layout_mode = 0
offset_left = 200.0
offset_top = 39.0
offset_right = 293.0
offset_bottom = 70.0
focus_mode = 0
text = "Load Song"

[node name="SongChart" type="LineEdit" parent="CreateChart" unique_id=1779909605]
layout_mode = 0
offset_left = 45.0
offset_top = 39.0
offset_right = 189.0
offset_bottom = 70.0

[node name="NewBpm" parent="CreateChart" unique_id=1198704572 instance=ExtResource("2_p8wo6")]
layout_mode = 0
offset_left = 38.0
offset_top = 80.0
offset_right = 269.0
offset_bottom = 129.0

[node name="CreateChart2" type="Button" parent="CreateChart" unique_id=576302393]
layout_mode = 0
offset_left = 62.0
offset_top = 156.0
offset_right = 127.0
offset_bottom = 187.0
focus_mode = 0
text = "Create"

[node name="CancelChart" type="Button" parent="CreateChart" unique_id=861220156]
layout_mode = 0
offset_left = 211.0
offset_top = 154.0
offset_right = 276.0
offset_bottom = 185.0
focus_mode = 0
text = "Cancel"

[node name="PopupMenu" type="PopupMenu" parent="." unique_id=2063861595]

[connection signal="toggled" from="TabContainer/Section/HitSection" to="." method="_on_hit_section_toggled"]
[connection signal="button_down" from="TabContainer/Section/Erase Section" to="." method="eraseSection"]
[connection signal="button_down" from="TabContainer/Section/Button" to="." method="copyLastSection"]
[connection signal="toggled" from="TabContainer/Section/ChangeBPM" to="." method="_on_change_bpm_toggled"]
[connection signal="value_changed" from="TabContainer/Section/NewBPM" to="." method="changeBpm"]
[connection signal="button_up" from="TabContainer/Section/Swap Section" to="." method="swapNoteSection"]
[connection signal="button_down" from="TabContainer/Section/Erase Notes Section" to="." method="eraseNotes"]
[connection signal="button_down" from="TabContainer/Section/Erase Events Section" to="." method="eraseEvents"]
[connection signal="button_down" from="TabContainer/Section/Flip Notes" to="." method="flipAllNotes"]
[connection signal="button_down" from="TabContainer/Section/Flip Player Notes" to="." method="flipPlayerNotesDir"]
[connection signal="button_down" from="TabContainer/Section/Flip Opponent Notes" to="." method="flipNotes"]
[connection signal="value_added" from="TabContainer/Note/SustainLength" to="." method="_on_sustain_length_value_added"]
[connection signal="toggled" from="TabContainer/Note/ShowStrums" to="." method="_on_show_strums_toggled"]
[connection signal="button_down" from="TabContainer/Event/AddEvent" to="." method="_on_add_event_button_down"]
[connection signal="button_up" from="TabContainer/Event/RemoveEvent" to="." method="_on_remove_event_button_up"]
[connection signal="value_changed" from="TabContainer/Event/EventIndex" to="." method="_on_event_index_value_changed"]
[connection signal="value_changed" from="TabContainer/Song/BPM" to="." method="changeSongBpm"]
[connection signal="button_down" from="TabContainer/Song/Reload Audio" to="." method="loadAudioStreams"]
[connection signal="button_down" from="TabContainer/Song/SaveToChart" to="." method="_on_save_to_chart_button_down"]
[connection signal="button_down" from="TabContainer/Song/Save Chart" to="." method="_on_save_chart_button_down"]
[connection signal="value_changed" from="TabContainer/Song/Speed" to="." method="changeSongSpeed"]
[connection signal="toggled" from="TabContainer/Editor/AutoChangeSection" to="." method="_on_auto_change_section_toggled"]
[connection signal="button_down" from="TabContainer/Editor/NewChart" to="CreateChart/Panel" method="show"]
[connection signal="button_down" from="TabContainer/Editor/LoadChart" to="." method="_on_load_chart_button_down"]
[connection signal="button_down" from="TabContainer/Editor/ReloadChart" to="." method="_load_song_data"]
[connection signal="button_down" from="CreateChart/Load Song Chart" to="." method="_on_load_song_chart_button_down"]
[connection signal="button_down" from="CreateChart/CreateChart2" to="." method="createChart"]
[connection signal="button_down" from="CreateChart/CreateChart2" to="CreateChart" method="hide"]
[connection signal="button_down" from="CreateChart/CancelChart" to="CreateChart" method="hide"]
